log
Fri Mar 27 05:41:25 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
331efde
Sat Mar 28 06:42:27 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:21: error: expected expression before ‘List’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                     ^~~~
list.c:38:26: error: expected ‘,’ or ‘;’ before ‘malloc’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                          ^~~~~~
aca766b
Sat Mar 28 06:42:54 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:21: error: expected expression before ‘List’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                     ^~~~
list.c:38:26: error: expected ‘,’ or ‘;’ before ‘malloc’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                          ^~~~~~
2e6273e
Sat Mar 28 06:43:48 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
e7ca2e7
Sat Mar 28 06:53:23 PM UTC 2026: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/60
ef99b5b
Sat Mar 28 07:03:31 PM UTC 2026: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:19: error: expected ‘;’ before ‘}’ token
   55 |     return primero
      |                   ^
      |                   ;
   56 | }
      | ~                  
59af54e
Sat Mar 28 07:03:43 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fa6441a
Sat Mar 28 07:15:10 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/60
b7edb03
Sat Mar 28 07:22:15 PM UTC 2026: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
0e1777d
Sat Mar 28 07:23:01 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
9bfa3a1
Sat Mar 28 07:24:29 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
1c4a13a
